--- a/src/components/buttons.css
+++ b/src/components/buttons.css
@@ -1,10 +1,21 @@
 .btns{
-    display: flex;
-    justify-content: space-around;
+    /* display: flex;
+    justify-content: space-around; */
     margin-bottom: 50px;
+    padding:50px 50px 0;
+    text-align: center;
 }
 
 button{
-    width: 100px;
+    width: 200px;
+    display: inline-block;
+    margin: 10px 30px;
+    height: 60px;
 }
 
+@media screen and (max-width:635px){
+    button{
+        width: 100%;
+        margin: 10px auto;
+    }
+}
